# controllers/annoucements.go
@@ -19,15 +19,17 @@ var annoucementService = services.NewAnnoucementService()
 // @Summary     Get annoucements of home
 // @Description Get genneral annoucements
 // @Tags        annoucements
+// @Tags        role.all
 // @Accept      json
 // @Produce     json
-// @Param       skip  query    uint                                           false "int valid >= 0"    minimun(0) default(0)
-// @Param       limit query    uint                                           false "int valid >= 0"    minimun(1) default(20) maximum(20)
-// @Param       total query    bool                                           false "total length data" default(false)
-// @Success     200   {object} res.Response{body=[]models.AnnoucementWLookUp} "desc"
-// @Failure     400   {object} res.Response{}                                 "Skip must be a int"
-// @Failure     400   {object} res.Response{}                                 "Limit must be a int"
-// @Failure     503   {object} res.Response{}                                 "Service Unavailable - NATS || Mongo Service Unavailable"
+// @Param       skip  query    uint                                     false "int valid >= 0"    minimun(0) default(0)
+// @Param       limit query    uint                                     false "int valid >= 0"    minimun(1) default(20) maximum(20)
+// @Param       total query    bool                                     false "total length data" default(false)
+// @Success     200   {object} res.Response{body=smaps.AnnoucementsMap} "desc"
+// @Failure     400   {object} res.Response{}                           "Skip must be a int"
+// @Failure     400   {object} res.Response{}                           "Limit must be a int"
+// @Failure     401   {object} res.Response{}                           "Unauthorized"
+// @Failure     503   {object} res.Response{}                           "Service Unavailable - NATS || Mongo Service Unavailable"
 // @Router      /get_annoucements [get]
 func (a *AnnoucementController) GetAnnoucements(c *gin.Context) {
 	skipQuery := c.DefaultQuery("skip", "0")
@@ -71,11 +73,15 @@ func (a *AnnoucementController) GetAnnoucements(c *gin.Context) {
 // @Summary     Upload annoucement in home
 // @Description Upload a annoucement in home, ROLS=[Director,Directive]
 // @Tags        annoucements
+// @Tags        role.directive
+// @Tags        role.director
 // @Accept      json
 // @Produce     json
 // @Param       annoucement body     forms.AnnoucementForm true "Add annoucement - Files must be MongoId[]"
-// @Success     200         {object} res.Response{}
+// @Success     201         {object} res.Response{}
 // @Failure     400         {object} res.Response{} "Bad request - Bad body"
+// @Failure     401         {object} res.Response{} "Unauthorized"
+// @Failure     401         {object} res.Response{} "Unauthorized role"
 // @Failure     409         {object} res.Response{} "Todos los archivos a publicar deben ser públicos"
 // @Failure     500         {object} res.Response{} "Server Internal Error - Maybe a bad response of NATS"
 // @Failure     503         {object} res.Response{} "Service Unavailable - NATS || DB Service Unavailable"
@@ -101,7 +107,7 @@ func (a *AnnoucementController) UploadAnnoucement(c *gin.Context) {
 	// Response
 	response := make(map[string]interface{})
 	response["_id"] = insertedId.Hex()
-	c.JSON(http.StatusOK, &res.Response{
+	c.JSON(http.StatusCreated, &res.Response{
 		Success: true,
 		Data:    response,
 	})
@@ -111,11 +117,15 @@ func (a *AnnoucementController) UploadAnnoucement(c *gin.Context) {
 // @Summary     Delete annoucement
 // @Description Delete a annoucement in home, ROLS=[Director,Directive]
 // @Tags        annoucements
+// @Tags        role.directive
+// @Tags        role.director
 // @Accept      json
 // @Produce     json
 // @Param       idAnnoucement path     string         true "MongoID Annoucement"
 // @Success     200           {object} res.Response{} "desc"
 // @Failure     400           {object} res.Response{} "idAnnoucement Must be a MongoID"
+// @Failure     401           {object} res.Response{} "Unauthorized"
+// @Failure     401           {object} res.Response{} "Unauthorized role"
 // @Failure     503           {object} res.Response{} "Service Unavailable - NATS || DB Service Unavailable"
 // @Router      /delete_annoucement/{idAnnoucement} [delete]
 func (a *AnnoucementController) DeleteAnnoucement(c *gin.Context) {
