# docs/swagger.json
@@ -62,6 +62,12 @@
                             "$ref": "#/definitions/res.Response"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized role",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    },
                     "503": {
                         "description": "Service Unavailable - NATS || DB Service Unavailable",
                         "schema": {
@@ -120,10 +126,7 @@
                                     "type": "object",
                                     "properties": {
                                         "body": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/models.AnnoucementWLookUp"
-                                            }
+                                            "$ref": "#/definitions/smaps.AnnoucementsMap"
                                         }
                                     }
                                 }
@@ -132,6 +135,12 @@
                     },
                     "400": {
                         "description": "Limit must be a int",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/res.Response"
                         }
@@ -170,14 +179,20 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/res.Response"
                         }
                     },
                     "400": {
                         "description": "Bad request - Bad body",
+                        "schema": {
+                            "$ref": "#/definitions/res.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized role",
                         "schema": {
                             "$ref": "#/definitions/res.Response"
                         }
@@ -213,13 +228,17 @@
             "properties": {
                 "annoucement": {
                     "type": "string",
-                    "minLength": 1
+                    "minLength": 1,
+                    "example": "This is a annoucement!"
                 },
                 "files": {
                     "type": "array",
                     "items": {
                         "type": "string"
-                    }
+                    },
+                    "example": [
+                        "6376c8283cc695e19d785b08"
+                    ]
                 }
             }
         },
@@ -228,10 +247,12 @@
             "type": "object",
             "properties": {
                 "_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "6376c8283cc695e19d785b08"
                 },
                 "annoucement": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "This is a annoucement!"
                 },
                 "files": {
                     "type": "array",
@@ -241,10 +262,12 @@
                     "x-omitempty": true
                 },
                 "update_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2022-09-21T20:10:23.309+00:00"
                 },
                 "upload_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "2022-09-21T20:10:23.309+00:00"
                 },
                 "user": {
                     "$ref": "#/definitions/models.SimpleUser"
@@ -256,13 +279,16 @@
             "type": "object",
             "properties": {
                 "_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "6376c8283cc695e19d785b08"
                 },
                 "title": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Title"
                 },
                 "type": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "private"
                 }
             }
         },
@@ -271,20 +297,25 @@
             "type": "object",
             "properties": {
                 "_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "6376c8283cc695e19d785b08"
                 },
                 "first_lastname": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Firstlastname"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Name"
                 },
                 "rut": {
                     "type": "string",
-                    "x-omitempty": true
+                    "x-omitempty": true,
+                    "example": "12345678-0"
                 },
                 "second_lastname": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Secondlastname"
                 }
             }
         },
@@ -293,13 +324,30 @@
             "properties": {
                 "body": {
                     "type": "object",
-                    "additionalProperties": true
+                    "additionalProperties": true,
+                    "x-omitempty": true
                 },
                 "message": {
-                    "type": "string"
+                    "type": "string",
+                    "x-omitempty": true,
+                    "example": "Error message"
                 },
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "smaps.AnnoucementsMap": {
+            "type": "object",
+            "properties": {
+                "annoucements": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.AnnoucementWLookUp"
+                    }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         }
